// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabLeadBlock tests should not render technical Specification tab 1`] = `
<div>
  <div
    class="Tabs-root-714 sdpTabLeadBlock"
  >
    <div
      class="Tabs-TabsBar-720"
    >
      <div
        class="Container-root-724"
      >
        <div
          class="MuiContainer-root Tabs-ContainerRoot-715 MuiContainer-maxWidthXl"
        >
          <div
            class="MuiTabs-root Tabs-TabsRoot-716"
          >
            <div
              aria-disabled="false"
              class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
            <div
              class="MuiTabs-scrollable"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-scrollable"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-one"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-TabRoot-717 Mui-selected"
                  data-gtm="{\\"id\\":\\"selector-tabs4\\",\\"label\\":\\"MC: sdp.leadBlock.about\\",\\"action\\":\\"Selector – Tabs\\"}"
                  data-testid="tab-one"
                  id="tab-one"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    MC: sdp.leadBlock.about
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-726 PrivateTabIndicator-colorPrimary-727 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
            <div
              aria-disabled="false"
              class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-one"
      class="MuiGrid-root Tabs-TabPanel-718 MuiGrid-item"
      data-testid="tabpanel-one"
      heading="MC: sdp.leadBlock.about"
      id="tabpanel-one"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-732 Tabs-TabPanelBox-719"
      >
        <div
          class="section Section-root-733 Section-white-737"
        >
          <div
            class="Container-root-724"
          >
            <div
              class="MuiContainer-root MuiContainer-maxWidthXl"
            >
              <div
                class="MuiGrid-root aboutLeadBlock-root-741 LeadBlock-root-744 MuiGrid-container MuiGrid-spacing-xs-3"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
                >
                  <div
                    class="LeadBlock-leadBlockContentSection-746"
                  >
                    <div
                      class="MuiTypography-root Typography-root-747 MuiTypography-body1"
                      data-testid="typography"
                    >
                      system-desc
                    </div>
                  </div>
                  <div
                    class="aboutLeadBlock-guaranteesAndAwardsAsset-742 LeadBlock-leadBlockContentSection-746"
                  >
                    <h6
                      class="MuiTypography-root LeadBlock-leadBlockContentHeading-745 Typography-root-747 MuiTypography-h6"
                      data-testid="typography"
                    >
                      MC: pdp.leadBlock.guaranteesWarranties
                    </h6>
                    <img
                      alt="asset-name"
                      class="image"
                      src="http://localhost:8000/asset-real-file-name.pdf"
                    />
                  </div>
                  <div
                    class="aboutLeadBlock-guaranteesAndAwardsAsset-742 LeadBlock-leadBlockContentSection-746"
                  >
                    <h6
                      class="MuiTypography-root LeadBlock-leadBlockContentHeading-745 Typography-root-747 MuiTypography-h6"
                      data-testid="typography"
                    >
                      MC: pdp.leadBlock.awardsCertificates
                    </h6>
                    <img
                      alt="asset-name"
                      class="image"
                      src="http://localhost:8000/asset-real-file-name.pdf"
                    />
                    <img
                      alt="asset-name"
                      class="image"
                      src="http://localhost:8000/asset-real-file-name.pdf"
                    />
                  </div>
                  <div
                    class="LeadBlock-leadBlockContentSection-746"
                  >
                    <h6
                      class="MuiTypography-root LeadBlock-leadBlockContentHeading-745 Typography-root-747 MuiTypography-h6"
                      data-testid="typography"
                    >
                      MC: sdp.leadBlock.specification
                    </h6>
                    <a
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiButton-root Button-root-755 MuiButton-outlined MuiButton-outlinedPrimary"
                      data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"asset-name\\",\\"action\\":\\"http://localhost:8000/asset-real-file-name.pdf\\"}"
                      href="http://localhost:8000/asset-real-file-name.pdf"
                      rel="noopener noreferrer"
                      tabindex="0"
                      target="_blank"
                    >
                      <span
                        class="MuiButton-label Button-label-758"
                      >
                        asset-name
                        <span
                          class="MuiButton-endIcon MuiButton-iconSizeMedium"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                </div>
                <div
                  class="MuiGrid-root Grid-item-730 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
                  data-testid="sidebar"
                >
                  <div
                    class="ColorPair-root-779 ColorPair-pearl-781"
                  >
                    <div
                      class="PostItCard-root-775"
                    >
                      <div
                        class="PostItCard-section-776"
                      >
                        <h4
                          class="MuiTypography-root Typography-root-747 Typography-underline-749 MuiTypography-h4"
                          data-testid="typography"
                        >
                          MC: sdp.leadBlock.systemBenefits
                        </h4>
                        <div
                          class="PostItCard-content-777"
                        >
                          <ul
                            class="IconList-root-805"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabLeadBlock tests should render 1`] = `
<div>
  <div
    class="Tabs-root-1 sdpTabLeadBlock"
  >
    <div
      class="Tabs-TabsBar-7"
    >
      <div
        class="Container-root-11"
      >
        <div
          class="MuiContainer-root Tabs-ContainerRoot-2 MuiContainer-maxWidthXl"
        >
          <div
            class="MuiTabs-root Tabs-TabsRoot-3"
          >
            <div
              aria-disabled="false"
              class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
            <div
              class="MuiTabs-scrollable"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-scrollable"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-one"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-TabRoot-4 Mui-selected"
                  data-gtm="{\\"id\\":\\"selector-tabs4\\",\\"label\\":\\"MC: sdp.leadBlock.about\\",\\"action\\":\\"Selector – Tabs\\"}"
                  data-testid="tab-one"
                  id="tab-one"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    MC: sdp.leadBlock.about
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="tabpanel-two"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-TabRoot-4"
                  data-gtm="{\\"id\\":\\"selector-tabs4\\",\\"label\\":\\"MC: sdp.leadBlock.technicalSpecification\\",\\"action\\":\\"Selector – Tabs\\"}"
                  data-testid="tab-two"
                  id="tab-two"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    MC: sdp.leadBlock.technicalSpecification
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="tabpanel-three"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Tabs-TabRoot-4"
                  data-gtm="{\\"id\\":\\"selector-tabs4\\",\\"label\\":\\"MC: sdp.leadBlock.documentsAndDownloads\\",\\"action\\":\\"Selector – Tabs\\"}"
                  data-testid="tab-three"
                  id="tab-three"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    MC: sdp.leadBlock.documentsAndDownloads
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-13 PrivateTabIndicator-colorPrimary-14 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
            <div
              aria-disabled="false"
              class="MuiButtonBase-root MuiTabScrollButton-root tabsScrollBtn Mui-disabled"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-one"
      class="MuiGrid-root Tabs-TabPanel-5 MuiGrid-item"
      data-testid="tabpanel-one"
      heading="MC: sdp.leadBlock.about"
      id="tabpanel-one"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-19 Tabs-TabPanelBox-6"
      >
        <div
          class="section Section-root-20 Section-white-24"
        >
          <div
            class="Container-root-11"
          >
            <div
              class="MuiContainer-root MuiContainer-maxWidthXl"
            >
              <div
                class="MuiGrid-root aboutLeadBlock-root-28 LeadBlock-root-31 MuiGrid-container MuiGrid-spacing-xs-3"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
                >
                  <div
                    class="LeadBlock-leadBlockContentSection-33"
                  >
                    <div
                      class="MuiTypography-root Typography-root-34 MuiTypography-body1"
                      data-testid="typography"
                    >
                      system-desc
                    </div>
                  </div>
                  <div
                    class="aboutLeadBlock-guaranteesAndAwardsAsset-29 LeadBlock-leadBlockContentSection-33"
                  >
                    <h6
                      class="MuiTypography-root LeadBlock-leadBlockContentHeading-32 Typography-root-34 MuiTypography-h6"
                      data-testid="typography"
                    >
                      MC: pdp.leadBlock.guaranteesWarranties
                    </h6>
                    <img
                      alt="asset-name"
                      class="image"
                      src="http://localhost:8000/asset-real-file-name.pdf"
                    />
                  </div>
                  <div
                    class="aboutLeadBlock-guaranteesAndAwardsAsset-29 LeadBlock-leadBlockContentSection-33"
                  >
                    <h6
                      class="MuiTypography-root LeadBlock-leadBlockContentHeading-32 Typography-root-34 MuiTypography-h6"
                      data-testid="typography"
                    >
                      MC: pdp.leadBlock.awardsCertificates
                    </h6>
                    <img
                      alt="asset-name"
                      class="image"
                      src="http://localhost:8000/asset-real-file-name.pdf"
                    />
                    <img
                      alt="asset-name"
                      class="image"
                      src="http://localhost:8000/asset-real-file-name.pdf"
                    />
                  </div>
                  <div
                    class="LeadBlock-leadBlockContentSection-33"
                  >
                    <h6
                      class="MuiTypography-root LeadBlock-leadBlockContentHeading-32 Typography-root-34 MuiTypography-h6"
                      data-testid="typography"
                    >
                      MC: sdp.leadBlock.specification
                    </h6>
                    <a
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiButton-root Button-root-42 MuiButton-outlined MuiButton-outlinedPrimary"
                      data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"asset-name\\",\\"action\\":\\"http://localhost:8000/asset-real-file-name.pdf\\"}"
                      href="http://localhost:8000/asset-real-file-name.pdf"
                      rel="noopener noreferrer"
                      tabindex="0"
                      target="_blank"
                    >
                      <span
                        class="MuiButton-label Button-label-45"
                      >
                        asset-name
                        <span
                          class="MuiButton-endIcon MuiButton-iconSizeMedium"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                </div>
                <div
                  class="MuiGrid-root Grid-item-17 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
                  data-testid="sidebar"
                >
                  <div
                    class="ColorPair-root-66 ColorPair-pearl-68"
                  >
                    <div
                      class="PostItCard-root-62"
                    >
                      <div
                        class="PostItCard-section-63"
                      >
                        <h4
                          class="MuiTypography-root Typography-root-34 Typography-underline-36 MuiTypography-h4"
                          data-testid="typography"
                        >
                          MC: sdp.leadBlock.systemBenefits
                        </h4>
                        <div
                          class="PostItCard-content-64"
                        >
                          <ul
                            class="IconList-root-92"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-two"
      class="MuiGrid-root Tabs-TabPanel-5 MuiGrid-item"
      data-testid="tabpanel-two"
      heading="MC: sdp.leadBlock.technicalSpecification"
      hidden=""
      id="tabpanel-two"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-98 Tabs-TabPanelBox-6"
      >
        <div
          class="section Section-root-20 Section-white-24"
        >
          <div
            class="Container-root-11"
          >
            <div
              class="MuiContainer-root MuiContainer-maxWidthXl"
            >
              <div
                class="MuiGrid-root LeadBlock-root-31 MuiGrid-container MuiGrid-spacing-xs-3"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
                >
                  <div
                    class="LeadBlock-leadBlockContentSection-33"
                  >
                    <div
                      class="SystemDetailsTechnicalSpec"
                    >
                      <div>
                        <table
                          class="MuiTable-root Table-root-99 Table-evenColor-101"
                        >
                          <thead
                            class="MuiTableHead-root ColorPair-root-66 ColorPair-pearl-68"
                          >
                            <tr
                              class="MuiTableRow-root MuiTableRow-head"
                            >
                              <th
                                class="MuiTableCell-root MuiTableCell-head"
                                scope="col"
                              >
                                appearanceAttributes
                              </th>
                              <th
                                class="MuiTableCell-root MuiTableCell-head"
                                scope="col"
                              />
                            </tr>
                          </thead>
                          <tbody
                            class="MuiTableBody-root"
                          >
                            <tr
                              class="MuiTableRow-root"
                            >
                              <td
                                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                              >
                                classification-feature-name
                              </td>
                              <td
                                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                              >
                                classification-feature-value
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-three"
      class="MuiGrid-root Tabs-TabPanel-5 MuiGrid-item"
      data-testid="tabpanel-three"
      heading="MC: sdp.leadBlock.documentsAndDownloads"
      hidden=""
      id="tabpanel-three"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-111 Tabs-TabPanelBox-6"
      >
        <div
          class="section Section-root-20 Section-white-24"
        >
          <div
            class="Container-root-11"
          >
            <div
              class="MuiContainer-root MuiContainer-maxWidthXl"
            >
              <div
                class="PostItCard-section-63"
              >
                <div
                  class="PostItCard-content-64"
                >
                  <div>
                    <div
                      class="tableContainer"
                    >
                      <div
                        class="DocumentSimpleTableResults-root-112 DocumentSimpleTableResults"
                      >
                        <div>
                          <table
                            class="MuiTable-root Table-root-99 Table-rowNoColor-103"
                          >
                            <thead
                              class="MuiTableHead-root ColorPair-root-66 ColorPair-pearl-68"
                            >
                              <tr
                                class="MuiTableRow-root MuiTableRow-head"
                              >
                                <th
                                  class="MuiTableCell-root MuiTableCell-head"
                                  scope="col"
                                >
                                  MC: documentLibrary.headers.type
                                </th>
                                <th
                                  class="MuiTableCell-root MuiTableCell-head"
                                  scope="col"
                                >
                                  MC: documentLibrary.headers.title
                                </th>
                                <th
                                  class="MuiTableCell-root MuiTableCell-head DocumentSimpleTableResults-tableHeader-113"
                                  scope="col"
                                >
                                  MC: documentLibrary.headers.download
                                </th>
                                <th
                                  class="MuiTableCell-root MuiTableCell-head DocumentSimpleTableResults-tableHeader-113"
                                  scope="col"
                                >
                                  MC: documentLibrary.headers.add
                                </th>
                              </tr>
                            </thead>
                            <tbody
                              class="MuiTableBody-root"
                            >
                              <tr
                                class="MuiTableRow-root DocumentSimpleTableResults-row-116 row"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body DocumentSimpleTableResults-tableCell-114"
                                >
                                  asset-name
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body DocumentSimpleTableResults-tableCell-114"
                                >
                                  <p>
                                    pim-link-document-title
                                  </p>
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body DocumentSimpleTableResults-tableCell-114 MuiTableCell-alignLeft"
                                >
                                  <a
                                    aria-disabled="false"
                                    class="MuiButtonBase-root MuiButton-root Button-root-42 MuiButton-text Button-text-43 MuiButton-textPrimary"
                                    data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost/pim-link-document-id\\"}"
                                    href="http://localhost/pim-link-document-id"
                                    rel="noopener noreferrer"
                                    tabindex="0"
                                    target="_blank"
                                  >
                                    <span
                                      class="MuiButton-label Button-label-45"
                                    >
                                      <span
                                        class="MuiButton-startIcon Button-startIcon-46 MuiButton-iconSizeMedium"
                                      >
                                        <svg
                                          class="DocumentSimpleTableResults-downloadIcon-117 download-icon"
                                        />
                                      </span>
                                      10 B
                                    </span>
                                    <span
                                      class="MuiTouchRipple-root"
                                    />
                                  </a>
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body DocumentSimpleTableResults-tableCell-114 MuiTableCell-alignCenter"
                                >
                                  <span
                                    class=""
                                  >
                                    <div
                                      class="MuiFormControl-root Checkbox-root-121"
                                    >
                                      <label
                                        class="MuiFormControlLabel-root"
                                      >
                                        <span
                                          aria-disabled="false"
                                          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-123 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                                        >
                                          <span
                                            class="MuiIconButton-label"
                                          >
                                            <input
                                              aria-label="MC: documentLibrary.download pim-link-document-title"
                                              class="PrivateSwitchBase-input-126"
                                              data-indeterminate="false"
                                              name="pim-link-document-id-pim-link-document-title"
                                              type="checkbox"
                                              value=""
                                            />
                                            <svg
                                              aria-hidden="true"
                                              class="MuiSvgIcon-root"
                                              focusable="false"
                                              viewBox="0 0 24 24"
                                            >
                                              <path
                                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                              />
                                            </svg>
                                          </span>
                                          <span
                                            class="MuiTouchRipple-root"
                                          />
                                        </span>
                                        <span
                                          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                                        />
                                      </label>
                                    </div>
                                  </span>
                                </td>
                              </tr>
                              <tr
                                class="MuiTableRow-root DocumentSimpleTableResults-row-116 row"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body DocumentSimpleTableResults-tableCell-114"
                                >
                                  asset-name
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body DocumentSimpleTableResults-tableCell-114"
                                >
                                  <p>
                                    pim-link-document-title
                                  </p>
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body DocumentSimpleTableResults-tableCell-114 MuiTableCell-alignLeft"
                                >
                                  <a
                                    aria-disabled="false"
                                    class="MuiButtonBase-root MuiIconButton-root IconButton-root-53 iconButton IconButton-medium-59 IconButton-text-55"
                                    href="http://localhost/pim-link-document-id"
                                    rel="noopener noreferrer"
                                    tabindex="0"
                                    target="_blank"
                                  >
                                    <span
                                      class="MuiIconButton-label"
                                    >
                                      <svg
                                        class="DocumentSimpleTableResults-externalLinkIcon-118"
                                      />
                                    </span>
                                    <span
                                      class="MuiTouchRipple-root"
                                    />
                                  </a>
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body DocumentSimpleTableResults-tableCell-114 MuiTableCell-alignCenter"
                                >
                                  <span
                                    class="DocumentSimpleTableResults-noDocumentIcon-119"
                                  >
                                    -
                                  </span>
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                    <div
                      class="DocumentResultsFooter"
                    >
                      <nav
                        aria-label="pagination navigation"
                        class="MuiPagination-root pagination docResultsFooterStyles-paginationRoot-127"
                      >
                        <ul
                          class="MuiPagination-ul"
                        >
                          <li>
                            <button
                              aria-label="Go to previous page"
                              class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-128 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
                              disabled=""
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiPaginationItem-icon"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                                />
                              </svg>
                            </button>
                          </li>
                          <li>
                            <button
                              aria-current="true"
                              aria-label="page 1"
                              class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-128 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-selected"
                              tabindex="0"
                              type="button"
                            >
                              1
                              <span
                                class="MuiTouchRipple-root"
                              />
                            </button>
                          </li>
                          <li>
                            <button
                              aria-label="Go to next page"
                              class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-128 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
                              disabled=""
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiPaginationItem-icon"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                                />
                              </svg>
                            </button>
                          </li>
                        </ul>
                      </nav>
                      <a
                        class="MuiTypography-root MuiLink-root MuiLink-underlineHover clear-downloads AnchorLink-root-131 Anchorlink MuiTypography-colorPrimary"
                        type="button"
                      >
                        <span>
                          MC: downloadList.clear
                        </span>
                      </a>
                      <button
                        class="MuiButtonBase-root MuiButton-root Button-root-42 MuiButton-contained Button-contained-44 MuiButton-containedPrimary"
                        data-gtm="{\\"id\\":\\"download3-button1\\",\\"label\\":\\"MC: downloadList.download (0)\\",\\"action\\":\\"[]\\"}"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label Button-label-45"
                        >
                          MC: downloadList.download (0)
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                      <p
                        class="MuiTypography-root RecaptchaPrivacyLinks Typography-root-34 MuiTypography-body1"
                        data-testid="typography"
                      >
                        This site is protected by reCAPTCHA and the Google 
                        <a
                          class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-131 Anchorlink MuiTypography-colorPrimary"
                          href="https://policies.google.com/privacy"
                          rel="noreferrer noopener"
                          target="_blank"
                        >
                          <span>
                            Privacy Policy
                          </span>
                        </a>
                         and 
                        <a
                          class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-131 Anchorlink MuiTypography-colorPrimary"
                          href="https://policies.google.com/terms"
                          rel="noreferrer noopener"
                          target="_blank"
                        >
                          <span>
                            Terms of Service
                          </span>
                        </a>
                         apply.
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabLeadBlock tests should render documents and downloads 1`] = `
<div
  aria-labelledby="tab-three"
  class="MuiGrid-root Tabs-TabPanel-141 MuiGrid-item"
  data-testid="tabpanel-three"
  heading="MC: sdp.leadBlock.documentsAndDownloads"
  hidden=""
  id="tabpanel-three"
  role="tabpanel"
>
  <div
    class="MuiBox-root MuiBox-root-247 Tabs-TabPanelBox-142"
  >
    <div
      class="section Section-root-156 Section-white-160"
    >
      <div
        class="Container-root-147"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <div
            class="PostItCard-section-199"
          >
            <div
              class="PostItCard-content-200"
            >
              <div>
                <div
                  class="tableContainer"
                >
                  <div
                    class="DocumentSimpleTableResults-root-248 DocumentSimpleTableResults"
                  >
                    <div>
                      <table
                        class="MuiTable-root Table-root-235 Table-rowNoColor-239"
                      >
                        <thead
                          class="MuiTableHead-root ColorPair-root-202 ColorPair-pearl-204"
                        >
                          <tr
                            class="MuiTableRow-root MuiTableRow-head"
                          >
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              MC: documentLibrary.headers.type
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              MC: documentLibrary.headers.title
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head DocumentSimpleTableResults-tableHeader-249"
                              scope="col"
                            >
                              MC: documentLibrary.headers.download
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head DocumentSimpleTableResults-tableHeader-249"
                              scope="col"
                            >
                              MC: documentLibrary.headers.add
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="MuiTableBody-root"
                        >
                          <tr
                            class="MuiTableRow-root DocumentSimpleTableResults-row-252 row"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body DocumentSimpleTableResults-tableCell-250"
                            >
                              asset-name
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body DocumentSimpleTableResults-tableCell-250"
                            >
                              <p>
                                pim-link-document-title
                              </p>
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body DocumentSimpleTableResults-tableCell-250 MuiTableCell-alignLeft"
                            >
                              <a
                                aria-disabled="false"
                                class="MuiButtonBase-root MuiButton-root Button-root-178 MuiButton-text Button-text-179 MuiButton-textPrimary"
                                data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"http://localhost/pim-link-document-id\\"}"
                                href="http://localhost/pim-link-document-id"
                                rel="noopener noreferrer"
                                tabindex="0"
                                target="_blank"
                              >
                                <span
                                  class="MuiButton-label Button-label-181"
                                >
                                  <span
                                    class="MuiButton-startIcon Button-startIcon-182 MuiButton-iconSizeMedium"
                                  >
                                    <svg
                                      class="DocumentSimpleTableResults-downloadIcon-253 download-icon"
                                    />
                                  </span>
                                  10 B
                                </span>
                                <span
                                  class="MuiTouchRipple-root"
                                />
                              </a>
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body DocumentSimpleTableResults-tableCell-250 MuiTableCell-alignCenter"
                            >
                              <span
                                class=""
                              >
                                <div
                                  class="MuiFormControl-root Checkbox-root-257"
                                >
                                  <label
                                    class="MuiFormControlLabel-root"
                                  >
                                    <span
                                      aria-disabled="false"
                                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-259 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                                    >
                                      <span
                                        class="MuiIconButton-label"
                                      >
                                        <input
                                          aria-label="MC: documentLibrary.download pim-link-document-title"
                                          class="PrivateSwitchBase-input-262"
                                          data-indeterminate="false"
                                          name="pim-link-document-id-pim-link-document-title"
                                          type="checkbox"
                                          value=""
                                        />
                                        <svg
                                          aria-hidden="true"
                                          class="MuiSvgIcon-root"
                                          focusable="false"
                                          viewBox="0 0 24 24"
                                        >
                                          <path
                                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        class="MuiTouchRipple-root"
                                      />
                                    </span>
                                    <span
                                      class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                                    />
                                  </label>
                                </div>
                              </span>
                            </td>
                          </tr>
                          <tr
                            class="MuiTableRow-root DocumentSimpleTableResults-row-252 row"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body DocumentSimpleTableResults-tableCell-250"
                            >
                              asset-name
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body DocumentSimpleTableResults-tableCell-250"
                            >
                              <p>
                                pim-link-document-title
                              </p>
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body DocumentSimpleTableResults-tableCell-250 MuiTableCell-alignLeft"
                            >
                              <a
                                aria-disabled="false"
                                class="MuiButtonBase-root MuiIconButton-root IconButton-root-189 iconButton IconButton-medium-195 IconButton-text-191"
                                href="http://localhost/pim-link-document-id"
                                rel="noopener noreferrer"
                                tabindex="0"
                                target="_blank"
                              >
                                <span
                                  class="MuiIconButton-label"
                                >
                                  <svg
                                    class="DocumentSimpleTableResults-externalLinkIcon-254"
                                  />
                                </span>
                                <span
                                  class="MuiTouchRipple-root"
                                />
                              </a>
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body DocumentSimpleTableResults-tableCell-250 MuiTableCell-alignCenter"
                            >
                              <span
                                class="DocumentSimpleTableResults-noDocumentIcon-255"
                              >
                                -
                              </span>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <div
                  class="DocumentResultsFooter"
                >
                  <nav
                    aria-label="pagination navigation"
                    class="MuiPagination-root pagination docResultsFooterStyles-paginationRoot-263"
                  >
                    <ul
                      class="MuiPagination-ul"
                    >
                      <li>
                        <button
                          aria-label="Go to previous page"
                          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-264 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiPaginationItem-icon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                            />
                          </svg>
                        </button>
                      </li>
                      <li>
                        <button
                          aria-current="true"
                          aria-label="page 1"
                          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-264 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-selected"
                          tabindex="0"
                          type="button"
                        >
                          1
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </li>
                      <li>
                        <button
                          aria-label="Go to next page"
                          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Pagination-root-264 MuiPaginationItem-root MuiPaginationItem-textPrimary MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiPaginationItem-icon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                            />
                          </svg>
                        </button>
                      </li>
                    </ul>
                  </nav>
                  <a
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover clear-downloads AnchorLink-root-267 Anchorlink MuiTypography-colorPrimary"
                    type="button"
                  >
                    <span>
                      MC: downloadList.clear
                    </span>
                  </a>
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root-178 MuiButton-contained Button-contained-180 MuiButton-containedPrimary"
                    data-gtm="{\\"id\\":\\"download3-button1\\",\\"label\\":\\"MC: downloadList.download (0)\\",\\"action\\":\\"[]\\"}"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label Button-label-181"
                    >
                      MC: downloadList.download (0)
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <p
                    class="MuiTypography-root RecaptchaPrivacyLinks Typography-root-170 MuiTypography-body1"
                    data-testid="typography"
                  >
                    This site is protected by reCAPTCHA and the Google 
                    <a
                      class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-267 Anchorlink MuiTypography-colorPrimary"
                      href="https://policies.google.com/privacy"
                      rel="noreferrer noopener"
                      target="_blank"
                    >
                      <span>
                        Privacy Policy
                      </span>
                    </a>
                     and 
                    <a
                      class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-267 Anchorlink MuiTypography-colorPrimary"
                      href="https://policies.google.com/terms"
                      rel="noreferrer noopener"
                      target="_blank"
                    >
                      <span>
                        Terms of Service
                      </span>
                    </a>
                     apply.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabLeadBlock tests should render the bimIframe tab 1`] = `
<div
  aria-labelledby="tab-four"
  class="MuiGrid-root Tabs-TabPanel-497 MuiGrid-item"
  data-testid="tabpanel-four"
  heading="MC: sdp.tabs.bim"
  hidden=""
  id="tabpanel-four"
  role="tabpanel"
>
  <div
    class="MuiBox-root MuiBox-root-603 Tabs-TabPanelBox-498"
  >
    <div
      class="bimLeadBlock"
    >
      <div
        class="section Section-root-512 Section-pearl-515"
      >
        <div
          class="Container-root-503"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <div
              class="MuiGrid-root LeadBlock-root-523 MuiGrid-container MuiGrid-spacing-xs-3"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
              >
                <div
                  class="LeadBlock-leadBlockContentSection-525"
                >
                  <h5
                    class="MuiTypography-root LeadBlock-leadBlockContentHeading-524 Typography-root-526 MuiTypography-h5"
                    data-testid="typography"
                  >
                    <h2
                      class="MuiTypography-root Typography-root-526 Typography-underline-528 MuiTypography-h2"
                      data-testid="typography"
                    >
                      BIM_CODE
                    </h2>
                  </h5>
                </div>
                <div
                  class="LeadBlock-leadBlockContentSection-525"
                />
              </div>
              <iframe
                class="assetsIframe bmiIframe"
                data-testid="bmi-iframe"
                src="http://nowhere.com"
                title="BIM_CODE"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
